--- a/source/gui/CGravizWinMain.ui
+++ b/source/gui/CGravizWinMain.ui
@@ -153,7 +153,7 @@
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
-          <widget class="CTerminal" name="mTerminal" native="true">
+          <widget class="NController::CTerminal" name="mTerminal" native="true">
            <property name="enabled">
             <bool>true</bool>
            </property>
@@ -226,7 +226,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>CTerminal</class>
+   <class>NController::CTerminal</class>
    <extends>QWidget</extends>
    <header location="global">Controller/CTerminal.h</header>
    <container>1</container>
